# masters-project-sphere

./: .gitignore  LICENSE  README.md
pdsensorvis/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
pdsensorvis/pdclient/: README.md  package-lock.json  package.json  vue.config.js  webpack-stats.json
pdsensorvis/pdclient/public/: index.html
pdsensorvis/pdclient/src/: App.vue  main.js
pdsensorvis/pdserver/: settings.py  urls.py  wsgi.py
pdsensorvis/sensors/: admin.py  context_processors.py  forms.py  models.py  preprocess_data.py  serializers.py  tests.py  urls.py  views.py
pdsensorvis/sensors/migrations/: 0001_initial.py  0002_auto_20190619_1657.py  0002_auto_20190729_1102.py  0002_auto_20190918_1711.py  0002_auto_20190924_1125.py  0002_wearabledatapoint.py  0003_auto_20190619_1706.py  0003_auto_20190729_1447.py  0003_auto_20190919_1321.py  0003_auto_20190920_1214.py  0003_auto_20190924_2227.py  0004_auto_20190722_1509.py  0004_auto_20190729_1448.py  0004_auto_20190920_1241.py  0004_auto_20190925_0809.py  0005_auto_20190722_1512.py  0005_auto_20190729_1459.py  0005_auto_20190920_1339.py  0005_auto_20191104_1651.py  0006_auto_20190722_1513.py  0006_auto_20190729_1500.py  0006_auto_20190920_1653.py  0006_auto_20191118_1220.py  0007_auto_20190723_1503.py  0007_auto_20190809_1527.py  0007_auto_20191118_1222.py  0008_auto_20190723_2029.py  0008_auto_20190809_1529.py  0008_auto_20191118_1223.py  0009_auto_20190903_1801.py  0010_auto_20190903_1803.py  0011_auto_20190904_1032.py  0012_auto_20190904_1046.py  0013_auto_20190905_1210.py  0015_auto_20190916_1712.py  (+2 more)
(+44 files in other folders)
